CHANGED - A non-backwards compatible change was made to an existing function/class.
RENAMED - A function/class has been renamed.
REMOVED - A function/class has been removed.
======================================================================================================

Forthcoming

66.0.0 - 2024-10-24
- CHANGED Switched to CMake build system
    - Updated READMEs to reflect new build system
    - Updated example code for Python to conform more to Python3
    - Changed some build file names to be more consistent across systems
    - Builds now using Docker instead of standard build scripts
- CHANGED Timestamp functions seconds() and nanoseconds() no longer default UNIX epoch - default epoch is now the storedEpoch() of the object
- CHANGED Timestamp::Epoch enum values changed:
    - UNIX is now 0x04
    - GPS is now 0x03
    - Added INTERNAL (0x01) and EXTERNAL (0x02) and UTC (0x04, same as UNIX)
- Wireless
    - Updated China transmit power limit to 10dBm
- Inertial
    - Added GV7-AR, -AHRS, -INS support
    - Added CV7-INS support
    - NmeaMessageFormat changes:
        - Added max configurations count
        - Made supportedDataClasses() public
    - CHANGED SentenceTypes PKRR and PKRA to MSRR and MSRA, respectively
    - Added MipDataClasses as a typedef for a vector of MipTypes::DataClass
    - Added UART feature for GPIO configuration
    - Added Aiding Measurements command set (0x13)
        - InertialNode::sendAidingMeasurement()
            - Types: AidingMeasurementPosition, AidingMeasurementHeight, AidingMeasurementVelocity, AidingMeasurementHeading, AidingMeasurementMagneticField, AidingMeasurementPressure
        - InertialNode::get/setAidingMeasurementResponseMode()
        - InertialNode::get/setAidingMeasurementReferenceFrames()
    - Moved GeometricVector, Position, PositionOffset classes to PositionVelocity.h, added Vec3f base class